fixed the layout issue on show/resize.

--- a/arduino-ide-extension/src/browser/style/sketchbook.css
+++ b/arduino-ide-extension/src/browser/style/sketchbook.css
@@ -11,14 +11,22 @@
     background-color: red;
 }
 
-.sketchbook-widget-to-scroll {
-    height: 2000px;
-    background-color: gold;
-}
-
 .sketchbook-widget .sketchbook-content {
     display: flex;
     flex-direction: column;
     height: 100%;
     box-sizing: border-box;
+}
+
+.sketchbook-widget .theia-view-container > .p-SplitPanel > .p-SplitPanel-handle:after {
+    background: var(--theia-sideBarSectionHeader-background);
+    background-color: var(--theia-sideBarSectionHeader-background);
+    min-height: 2px;
+    min-width: 2px
+}
+
+.theia-view-container .part > .body {
+    height: var(--theia-view-container-content-height);
+    min-width: 50px;
+    min-height: 120px;
 }
